# scoop

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Changelog.md  README.md
examples/: CMakeLists.txt  CategoricalColorMap.cpp  ColorPalette.cpp  SequentialColorMap.cpp
scoop/: CMakeLists.txt  CategoricalColorMap.h  CategoricalColorMap.hpp  Color.cpp  Color.h  ColorBrewerPalettes.h  ColorPalette.cpp  ColorPalette.h  MatplotlibPalettes.h  SequentialColorMap.cpp  SequentialColorMap.h
tests/: CMakeLists.txt  CategoricalColorMap.cpp  Color.cpp  ColorPalette.cpp  SequentialColorMap.cpp  scoopTests.h
